--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <h3>Featured Halls</h3>
             </div>
             <div class="row fHall">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="hall">
                         <div class="hallImg">
                             <img src="./images/blueMoon.png" alt="Hall">
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="hall">
                         <div class="hallImg">
                             <img src="./images/faisal.png" alt="Hall">
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="hall">
                         <div class="hallImg">
                             <img src="./images/vista.png" alt="Hall">
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="hall">
                         <div class="hallImg">
                             <img src="./images/raddison.png" alt="Hall">
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="hall">
                         <div class="hallImg">
                             <img src="./images/faisal.png" alt="Hall">
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="hall">
                         <div class="hallImg">
                             <img src="./images/vista.png" alt="Hall">
